**************************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid Downloader
Fixed - indicates a bug fix
Internal - indicates an internal change - information for FRD developers - nothing important for users

FreeRapid Downloader 0.86
  Added : Support for Portuguese and Simplified Chinese languages - thanks to all translators!
  Added : Quiet Mode - don't let captcha dialogs bother you anymore while watching videos!
  Added : If the same file is downloaded from multiple sources, duplicates are automatically skipped
  Added : Support for preventing standby while downloading
  Added : Support for using system recycle bin for deleting files
  Added : Support for new search engine - http://wuploadsearch.com
  Changed : Speed up startup time
  Changed : Internal - NirCmd is not used anymore for native Windows actions
  Changed : Internal - Updated BetterSwingApplicationFramework to v1.9.3 snapshot
  Changed : Internal - Updated jna, mina, and commons-codec libraries to their latest versions
  Changed : Internal - Updated look and feel libraries
  Fixed : Java 7 compatibility issues

1st January 2011 - FreeRapid Downloader 0.85 Update 1
  Added : Support for Polish, Bulgarian, Korean, Portuguese (Brasil), Finnish and Hebrew languages - thanks to all translators!
  Added : Support for grouping FRD application in taskbar for Windows 7
  Added : Experimental - you have to enable it manually in startup.properties file for now
        - Support for deleting files to recycle bin
        - Support for searching subtitles on opensubtitles.org (popmenu on selected files)
  Added : Plugin API
           - ScriptUtils class for easy JavaScript manipulation
  Changed: Internal - enhanced ESET antivirus detection, which is blocking FRD to start